; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cbin.c_rva.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cbin.c_rva.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VA_TRUE = common dso_local global i32 0, align 4
@UT64_MAX = common dso_local global i64 0, align 8
@VA_NOREBASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i64, i64, i32)* @rva to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rva(i32* %0, i64 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @VA_TRUE, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %23

13:                                               ; preds = %4
  %14 = load i64, i64* %7, align 8
  %15 = load i64, i64* @UT64_MAX, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %22

17:                                               ; preds = %13
  %18 = load i32*, i32** %6, align 8
  %19 = load i64, i64* %7, align 8
  %20 = load i64, i64* %8, align 8
  %21 = call i64 @r_bin_get_vaddr(i32* %18, i64 %19, i64 %20)
  store i64 %21, i64* %5, align 8
  br label %31

22:                                               ; preds = %13
  br label %23

23:                                               ; preds = %22, %4
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* @VA_NOREBASE, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %23
  %28 = load i64, i64* %8, align 8
  store i64 %28, i64* %5, align 8
  br label %31

29:                                               ; preds = %23
  %30 = load i64, i64* %7, align 8
  store i64 %30, i64* %5, align 8
  br label %31

31:                                               ; preds = %29, %27, %17
  %32 = load i64, i64* %5, align 8
  ret i64 %32
}

declare dso_local i64 @r_bin_get_vaddr(i32*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
